add required shell spec for action

--- a/permissions/destroy-automation-role/action.yml
+++ b/permissions/destroy-automation-role/action.yml
@@ -22,4 +22,4 @@ runs:
     
     - name: Tear Down Automation Role
       run: aws cloudformation delete-stack --stack-name ${{ inputs.service-key }}-automation-stack
-      
+      shell: bash
