--- a/permissions/destroy-automation-role/action.yml
+++ b/permissions/destroy-automation-role/action.yml
@@ -3,6 +3,9 @@ description: "Destroys the cloudformation stack as a clean up after using an ass
 inputs:
   service-key:
     description: "The name of the service which will be used to identify stacks and resources"
+    required: true
+  environment:
+    required: true
   aws-access-key-id: 
     required: true
   aws-secret-access-key:
@@ -21,5 +24,5 @@ runs:
         aws-region: ${{ inputs.aws-region }}
     
     - name: Tear Down Automation Role
-      run: aws cloudformation delete-stack --stack-name ${{ inputs.service-key }}-automation-stack
+      run: aws cloudformation delete-stack --stack-name ${{ inputs.environment }}-${{ inputs.service-key }}-automation-stack
       shell: bash
