--- a/permissions/assume-automation-role/action.yml
+++ b/permissions/assume-automation-role/action.yml
@@ -43,7 +43,7 @@ runs:
         aws-access-key-id: ${{ inputs.aws-access-key-id }}
         aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
         aws-region: ${{ inputs.aws-region }}
-        role-to-assume: ${{ inputs.service-key }}-automation-role
+        role-to-assume: ${{inputs.environment}}-${{ inputs.service-key }}-automation-role
         role-skip-session-tagging: true
         role-duration-seconds: 1200
         role-session-name: automation-session
