Revert "Yank out Action and re-add ssh logic"
This reverts commit b477bceca09c196ce28631a91070a1843fb1ee18.

--- a/.github/workflows/jsonnet-build-commit-artifacts.yaml
+++ b/.github/workflows/jsonnet-build-commit-artifacts.yaml
@@ -37,10 +37,11 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: ${{ inputs.golang-version }}
-      - run: |
-          eval `ssh-agent`
-          ssh-add - <<< "${{ secrets.deploy_key }}"
-          go install -a github.com/jsonnet-bundler/jsonnet-bundler/cmd/jb@latest && rm -rf vendor && jb install
+      - uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.deploy_key }}
+      # Install jb and download assets
+      - run: go install -a github.com/jsonnet-bundler/jsonnet-bundler/cmd/jb@latest && rm -rf vendor && jb install
       - run: ${{ inputs.executable }} 
       - run: |
           git config --global user.name "auto-commit"
