--- a/.github/workflows/jsonnet-build-commit-artifacts.yaml
+++ b/.github/workflows/jsonnet-build-commit-artifacts.yaml
@@ -45,5 +45,5 @@ jobs:
       - run: ${{ inputs.executable }} 
       - run: |
           git config --global user.name "auto-commit"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.gitub.com"
+          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
           git commit -am "Updated files from Jsonnet run." && git push origin $HEAD:${{ github.head_ref }} || true
