--- a/git/commit/action.yml
+++ b/git/commit/action.yml
@@ -18,6 +18,6 @@ runs:
         git config --global user.name "auto-commit"
         git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
         git add .
-        git commit -m "${{ inputs.message }}" && git push origin $HEAD:${{ github.head_ref }} || true
+        git commit -m "${{ inputs.message }}" && git push origin HEAD:${{ github.head_ref }} || true
       shell: bash
       working-directory: ${{ inputs.path }}
