--- a/git/commit/action.yml
+++ b/git/commit/action.yml
@@ -22,7 +22,7 @@ runs:
         git fetch --depth=${{ inputs.fetch_depth }}
         git config --global user.name "auto-commit"
         git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-        git checkout ${{ inputs.branch }}
+        git checkout ${{ github.head_ref }}
         git add .
         git commit -m "${{ inputs.message }}" && git push origin HEAD:${{ github.head_ref }} || true
       shell: bash
