--- a/git/commit/action.yml
+++ b/git/commit/action.yml
@@ -24,6 +24,6 @@ runs:
         git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
         git checkout ${{ github.head_ref }}
         git add .
-        git commit -m "${{ inputs.message }}" && git push origin HEAD:${{ github.head_ref }} || true
+        git commit -m "${{ inputs.message }}" && git push origin ${{ github.head_ref }} || true
       shell: bash
       working-directory: ${{ inputs.path }}
